--- a/groupassigfts.Rmd
+++ b/groupassigfts.Rmd
@@ -56,9 +56,6 @@ summarytable_ts_or <- read_excel(summarytable_ts_file, sheet = 1)
 summarytable_ts_tr <- read_excel(summarytable_ts_file, sheet = 5)
 teststable <- read_excel(summarytable_ts_file, sheet = 2)
 
-
-resultsfts_luna.xlsx
-
 #Luna file path
 #data<-read.csv("/Users/lunaallani/Desktop/IE_Master/Forecasting Time Series/Homework_1_DATA.csv", header=TRUE,sep=";",dec=",")
 
@@ -107,7 +104,7 @@ kbl(summarytable_ts_tr)
 Additionally we wanted to list all the tests we carried out in one place in order for it to be more understandable
 
 ```{r, echo=TRUE}
-kbl(tests_table)
+kbl(teststable)
 ```
 
 </div>
